test_case/rust-lang_rust/12146_34602568.rs

extern mod extra; //~ ERROR: could not find crate for `std`
